[package]
name = "RustySpoon"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] } 
tokio = {version = "1.12.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
