[package]
name = "RustySpoon"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] } 
tokio = {version = "1.12.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
delay_timer = "0.9.2"
uuid = {version = "0.8.2", features = ["serde", "v4"] }
