[package]
name = "rusty_spoon"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] } 
tokio = {version = "1.12.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
uuid = {version = "0.8.2", features = ["serde", "v4"] }
roux = "1.3.7"
chrono = "0.4.19"
serde_json = "1.0.70"
serde = {version = "1.0.130", features = ["derive"]}
once_cell = "1.8.0"
reqwest = {version="0.11.6", features = ["cookies"]}
